# workspace-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  paper-effect.yml
docs/: codex-agent-evaluation.md  effect-measurement.md
src/: main.rs  related_cli.rs
tests/: cli.rs
tools/: check_effect_thresholds.py  compare_effect_summaries.py  effect_paper_holdouts.json  extract_effect_summary.py  measure_effect.py  prepare_effect_holdouts.py  render_paper_artifact_summary.py  run_codex_workspace_pilot.py  run_codex_workspace_suite.py  run_effect_artifacts.py  summarize_effect.py  test_codex_workspace_pilot.py  test_codex_workspace_suite.py  test_effect_tools.py  verify_effect_artifacts.py
