[package]
name = "workspace-cli"
version = "0.1.0"
edition = "2024"
description = "A CLI runtime for observable workspace operations."
license = "MIT"

[[bin]]
name = "workspace"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
